--- a/frontend/src/components/componentstyle.css
+++ b/frontend/src/components/componentstyle.css
@@ -9,28 +9,11 @@
     cursor: pointer;
 }
 
-.popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.ingredientbar {
+    width: 80%;
 }
 
-.popup-inner {
-    position: relative;
-    padding: 32px;
+.recipebar {
     width: 100%;
-    max-width: 640px;
-    background-color: white;
-}
-
-.popup-inner .close-btn {
-    position: absolute;
-    top: 16px;
-    right: 16px;
+    float: left;
 }
