--- a/frontend/src/pages/Welcome.css
+++ b/frontend/src/pages/Welcome.css
@@ -10,17 +10,23 @@
     top: 50%;
     padding: 50pt;
     display: flex;
-    justify-content: center;
-    font-size: 20pt;  
+    justify-content: space-evenly;
+    font-size: 20pt; 
 }
 
 .left{
     padding: 50px;
+    border: black solid 1px;
 }
 
+.space{
+    padding: 60px;
+}
 .right{
     padding: 50px;
+    border: black solid 1px;
 }
+
 h1 {
     padding: 40px 30px;
     font-size: 60px;
