--- a/frontend/src/pages/NavBar.css
+++ b/frontend/src/pages/NavBar.css
@@ -2,6 +2,16 @@ body {
     margin: 0;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 15%;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+}
+
 li {
     display: block;
     height: 20%;
