--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -1,9 +1,6 @@
-.wrapper {
-    display: flex;
+.main-content {
     position: relative;
-}
-
-.wrapper .main-content {
-    width: 100%;
-    margin-left: 100px;
+    left: 15%;
+    display: flex;
+    background-color: aqua;
 }
