--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -1,6 +1,43 @@
 .main-content {
     position: relative;
     left: 15%;
+    width: 85%;
+}
+
+.main-content > * {
+    margin: 20px;
+}
+
+.info {
     display: flex;
-    background-color: aqua;
+}
+
+.attribute {
+    display: flex;
+    flex-direction: column;
+}
+
+.attribute div {
+    margin: 10px;
+}
+
+.data {
+    display: flex;
+    flex-direction: column;
+    margin-left: 70px;
+}
+
+.data div {
+    margin: 10px;
+}
+
+.change-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    margin-left: 70px;
+}
+
+.change-button button {
+    margin: 10px;
 }
