--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -41,3 +41,37 @@
 .change-button button {
     margin: 10px;
 }
+
+.allergies-title {
+    margin-bottom: 0;
+}
+
+.allergies {
+    background-color: coral;
+    margin-top: 0px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+.search-allergies {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.search-results {
+    margin-top: 20px;
+    height: 200px;
+    width: 200px;
+    border-style: ridge;
+    overflow: auto;
+}
+
+.added-allergies {
+    text-align: center;
+}
+.allergies-box {
+    height: 300px;
+    width: 500px;
+    border-style: ridge;
+}
