--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -8,6 +8,24 @@ button {
     width: 90%;
 }
 
+.recipeBox {
+    border-style: solid;
+    border-color: pink;
+    margin-top: 15;
+    width: 95%;
+    height: 100vh;
+    overflow: scroll;
+}
+
+.recipe_screen {
+    width: 75%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: scroll;
+}
+
 .pantry-upper {
     float: left;
     width: 25%;
