--- a/frontend/src/pages/NavBar.css
+++ b/frontend/src/pages/NavBar.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
 }
 
-ul {
+ul.navBar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@ ul {
     overflow: auto;
 }
 
-li {
+ul.navBar li {
     display: block;
     height: 20%;
     background-color: #dddddd;
@@ -21,12 +21,12 @@ li {
     align-items: center;
 }
 
-li.currentTag {
+ul.navBar li.active {
     background-color: #4CAF50;
     color: white;
 }
 
-li:hover {
+ul.navBar li:hover {
   background-color: #555;
   color: white;
 };
