--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -18,7 +18,7 @@ button {
 }
 
 .recipe_screen {
-    width: 75%;
+    width: 80%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -28,7 +28,7 @@ button {
 
 .pantry-upper {
     float: left;
-    width: 25%;
+    width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,13 +64,14 @@ p {
     display: flex;
     justify-content: space-around;
     align-content: center;
-    flex: wrap;
+    flex-wrap: wrap;
     padding: 15px;
 }
 
 .recipe_box {
+
     border: 2px solid black;
     border-radius: 10px;
     background-color: aqua;
-    width: 100%;
+    width: 48%;
 }
