add average rating in recipe page

--- a/frontend/src/pages/RecipeDetails.css
+++ b/frontend/src/pages/RecipeDetails.css
@@ -5,3 +5,12 @@
 .recipe_details .recipe_name {
     font-size: 25pt;
 }
+
+.recipe_rating {
+    display: flex;
+}
+
+.rating_number {
+    font-size: 13pt;
+    margin-left: 5px;
+}
