--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -2,6 +2,6 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
-.Sign-in {
-    margin: 100px;
+body main .box .Sign-in {
+    font-family: "Poppins", sans-serif;
 }
