--- a/frontend/src/pages/DietAndMetrics.css
+++ b/frontend/src/pages/DietAndMetrics.css
@@ -6,3 +6,53 @@
 .h1 {
     margin-left: 0;
 }
+
+.wrapper .main-content .recommend_section .recipe_box .details{
+    font-family: "Poppins", sans-serif;
+    margin-left: 1.5vw;
+}
+
+.wrapper .main-content .recommend_section .recipe_box .details .rec_name{
+    font-size: 17pt;
+}
+
+.wrapper .main-content .recommend_section .recipe_box .details > p {
+    color: grey;
+}
+
+.wrapper .main-content .recommend_section .recipe_box .details .see_recipe_button {
+    float: right;
+    margin-right: 8px;
+    top: -8px
+}
+
+.recipe_box .list_recipes {
+    box-shadow: 0px 15px grey;
+}
+
+.wrapper .main-content .recommend_section .recipe_box{
+    box-shadow: 3px 3px 5px rgb(212, 212, 212);
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    background-color: lightblue;
+    width: 48%;
+    height: 10%;
+    margin: 2px;
+}
+
+.wrapper .main-content .recommend_section {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 15px;
+}
+
+.break {
+    width: 100%;
+    height: 5px;
+    border-radius: 30px;
+    background-color: lightgray;
+    border: 0 none;
+}
