reset password function

--- a/frontend/src/pages/RecipeDetails.css
+++ b/frontend/src/pages/RecipeDetails.css
@@ -1,5 +1,5 @@
 .recipe_details {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .recipe_details .recipe_name {
