--- a/frontend/src/pages/RecipeDetails.css
+++ b/frontend/src/pages/RecipeDetails.css
@@ -1,6 +1,4 @@
-.recipe_details {
-    background-color: #4dabf5;
-}
+
 
 .recipe_details .upper{
     font-family: "Poppins", sans-serif;
@@ -8,6 +6,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #4dabf5;
+}
+
+.recipe_details .btn{
+    position: absolute;
+    float: left;
+    margin: 1vw 1vw;
 }
 
 .recipe_details .recipe_name {
