--- a/frontend/src/pages/RecipeDetails.css
+++ b/frontend/src/pages/RecipeDetails.css
@@ -1,4 +1,8 @@
 
+.recipe_details {
+    background-color: white ;
+    height: 120vh;
+}
 
 .recipe_details .upper{
     font-family: "Poppins", sans-serif;
@@ -7,6 +11,18 @@
     justify-content: center;
     align-items: center;
     background-color: #4dabf5;
+    border-radius: 10px;
+}
+
+.recipe_details .upper .comments {
+    margin-bottom: 1vw;
+    margin-top: 1vw;
+    background-color: white;
+}
+
+.recipe_details .upper > p {
+    font-size: 12pt;
+    font-family: "Poppins", sans-serif;
 }
 
 .recipe_details .btn{
@@ -27,7 +43,7 @@
 
 .v1 {
     border-left: 4px solid lightgrey;
-    height: 100vh;
+    height: 80vh;
     position: absolute;
     left: 50vw;
     margin-top: 1vw;
@@ -46,7 +62,7 @@
 .recipe_details .lower .recipe_ingredients {
     float: right;
     margin-right: 8vw;
-    width: 35vw;
+    width: 30vw;
 }
 
 .recipe_details .lower .recipe_ingredients .ingredient_values {
